tests/functional/lang/eval-fail-groupBy-1.err.exp
error:
       … while calling the 'groupBy' builtin
         at /pwd/lang/eval-fail-groupBy-1.nix:1:1:
            1| builtins.groupBy 1 "foo"
             | ^
            2|

       … while evaluating the first argument passed to builtins.groupBy

       error: expected a function but found an integer: 1
